project hosts the Apache Mailet API, and the James server is a Mailet 
container. This feature makes it easy to design, write, and deploy custom 
applications for mail processing. This modularity and ease of customization 
is one of James' strengths, and can allow administrators to produce powerful 
applications surprisingly easily. 

Version 3.2.2
=============
Is a compatible, point release

Notes
-----
  * The Mordred data source is deprecated and will be removed in a future 
    minor release.
  * The cryptography mailets and matchers are now available as a separate 
    library (http://james.apache.org/mailet/crypto/). The versions included
    will be replaced by this library in a future minor release. Users
    should upgrade to the library versions.
 
Since 3.2.1
-----------        
Bug Fixes
 * JAMES-435 - James Service Wrapper displays wrong James version
 * JAMES-770 - Exception when runnning JAMES with run.sh
 * JAMES-787 - Unable to resolv 127.0.0.1/localhost  [was: Fetchmail 
               not use 127.0.0.1 as RemoteAddress when using index=-1]
 * JAMES-801 - Using database" documentation should reflect removal 
               of mysql jdbc driver.
 * JAMES-814 - tools/bin/ant has malformed line endings
 * JAMES-815 - The build process should auto-create the www directory
 * JAMES-846 - RemoteDelivery convertTo7Bit() can corrupt message content. 
 * JAMES-851 - RemoteManagerTest fails because of bugs in the test
 * JAMES-875 - Message-ID changed by mailets (MSGID_FROM_MTA_HEADER changed)
 * JAMES-899 - RemoteDelivery sends a message again and again if 
               transport.close() throws a MessagingException
 
New Features
 * JAMES-849 - Support PostgreSQL for BayesianAnalysis

Tasks Completed
 * JAMES-693 - Update javamail to 1.4.1 final when available
 * JAMES-800 - UPGRADE.txt in trunk (and in 2.3.x branch) provides docs 
               for updating from 2.2.0 to 2.3.0: should be updated or made clear